--- a/pom.xml
+++ b/pom.xml
@@ -26,9 +26,29 @@
         </repository>
     </repositories>
 
+    <distributionManagement>
+        <repository>
+            <id>panda-repo-releases</id>
+            <url>https://repo.panda-lang.org/releases</url>
+        </repository>
+    </distributionManagement>
+
     <build>
         <defaultGoal>clean install</defaultGoal>
         <plugins>
+            <plugin>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8.1</version>
+                <executions>
+                    <execution>
+                        <id>default-deploy</id>
+                        <phase>deploy</phase>
+                        <goals>
+                            <goal>deploy</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>2.4.1</version>
